--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "animate.css": "^4.1.1",
+    "axios": "^1.6.0",
     "element-plus": "^2.3.8",
     "pinia": "^2.1.3",
     "scss": "^0.2.4",
