--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pinia": "^2.1.3",
     "scss": "^0.2.4",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.2.0",
